--- a/dream/views/main/index.erb
+++ b/dream/views/main/index.erb
@@ -1,8 +1,10 @@
 <div class="main_index">
   <img src="<%= File.join(Settings.static_root,'img/2.jpg' ) %>"/>
   <div class="intro">
-    <center><p>Designed and Developed by Gu. BY-NC-SA License.</p></center>
-    <center><p>Copyright © 2013 - 2014 guyifeng. All Rights Reserved.</p></center>
+    <br>
+    <center><p>Designed and Developed by Gu</p></center>
+    <center><p>
+本站所有资源全部来自互联网，如涉及版权信息请联系&nbsp;&nbsp;651019063@qq.com!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;网站备案号：沪ICP备13041341号-1</p></center>
   </div>
 </div>
 <style type="text/css">
