--- a/dream/views/photos/index.erb
+++ b/dream/views/photos/index.erb
@@ -63,13 +63,10 @@
     </div>
   </div>
 <% end %>
-
-<br>
-<div class="container" style="text-align:center">
-	<small>把百度设为首页 | 搜索风云榜 | 关于百度</small>
-	<br><small>©2013 Baidu 使用百度前必读</small>
-</div>
-
+  <div class="intro">
+    <center><p>
+本站所有资源全部来自互联网，如涉及版权信息请联系&nbsp;&nbsp;651019063@qq.com!<br>网站备案号：沪ICP备13041341号-1</p></center>
+  </div>
 <script type="text/javascript">
   $("#photos").addClass("active");
   function setover(obj) {
@@ -81,3 +78,9 @@
       obj.style['filter'] = 'alpha(opacity=100)';
   }
 </script>
+<style type="text/css">
+  .intro{
+    margin-top: 30px;
+  }
+
+</style>
