--- a/backend/app/views/photos/index.html.erb
+++ b/backend/app/views/photos/index.html.erb
@@ -21,6 +21,7 @@
 		<table class="table table-striped table-bordered">
 			<thead>
 			<tr>
+				<th>id</th>
 				<th>名称</th>
 				<th>类型</th>
 				<th>预览</th>
@@ -29,6 +30,7 @@
 			</thead>
 			<% @photos.each do |photo|%>
 				<tr>
+					<td><%= photo.id%></td>
 					<td><%= photo.name%></td>
 					<td><%= PhotoCategory.find(photo.photo_category_id).name%></td>
 					<td><img src="<%= picture_url(photo.alias_name,"avatar",photo.photo_category_id.to_s) %>"></td>
