--- a/dream/views/layout.erb
+++ b/dream/views/layout.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Dream</title>
+  <link rel="icon" href="http://static.menghuanwd.cn/img/title_icon.jpg" type="image/x-icon">
   <script src="<%= File.join(Settings.static_root,'js/jquery.js' )%>" type="text/javascript"></script>
   <script src="<%= File.join(Settings.static_root,'js/bootstrap.min.js' )%>" type="text/javascript"></script>
   <script src="<%= File.join(Settings.static_root,'js/jquery.imagesloaded.js' )%>" type="text/javascript"></script>
@@ -30,7 +31,9 @@
       <li id="jokes"><a href="/jokes">笑话</a></li>
       <li id="moods"><a href="/moods">心情</a></li>
       <li id="essays"><a href="/essays">美文</a></li>
-      <li id="philosophies"><a href="/philosophies">哲理</a></li>
+      <li id="philosophies"><a href="/philosophies">现实</a></li>
+      <li id="suggestions"><a href="/suggestions">建议</a></li>
+      <li id="me"><a href="/me">站长</a></li>
     </ul>
     <form class="navbar-form navbar-right" role="search">
       <div class="form-group">
@@ -41,7 +44,6 @@
   </div>
 </nav>
 <%= yield %>
-
 </body>
 </html>
 <script type="text/javascript">
