--- a/dream/views/notes/index.erb
+++ b/dream/views/notes/index.erb
@@ -5,6 +5,7 @@
     <% end %>
   </ul>
 </div>
+
 <div class="col-md-6">
   <ol class="breadcrumb">
     <li><a href="/notes">笔记</a></li>
@@ -19,10 +20,30 @@
     <% end %>
   </div>
 </div>
-  <script type="text/javascript">
+
+<div class="col-md-3" id="color">
+  <span class="yqlj">友情链接</span>
+  <div>
+   <a target="_black" href="http://www.troyliu.com">
+    <abbr title="作者刘枫"><span class="label label-danger">枫叶阅读</span></abbr>
+   </a>
+   &nbsp;
+   <a target="_black" href="http://commandeq.com/">
+    <abbr title="作者刘枫"><span class="label label-success">弹痕</span></abbr>
+  </a>
+  </div>
+</div>
+
+<script type="text/javascript">
   $("#notes").addClass("active");
   if("<%=@note_category%>" == ""){
   }else{
     $(".breadcrumb").append("<li class='active'><%=@note_category%></li>")
   }
 </script>
+
+<style type="text/css">
+.yqlj{
+  font-size: 30px;
+}
+</style>
