--- a/dream/views/notes/show.erb
+++ b/dream/views/notes/show.erb
@@ -15,6 +15,14 @@
     <p><%= @note.content%></p>
   </div>
 </div>
+<div class="col-md-3" id="color">
+  <span class="yqlj">友情链接</span>
+  <div>
+   <a target="_black" href="http://www.troyliu.com"><span class="label label-danger">枫叶阅读</span></a>
+   &nbsp;
+   <a target="_black" href="http://commandeq.com/"><span class="label label-success">弹痕</span></a>
+  </div>
+</div>
 
 <script type="text/javascript">
   if("<%=@note_category%>"== ""){
@@ -23,3 +31,9 @@
     $(".breadcrumb").append("<li class='active'><%=@note.title%></li>");
   }
 </script>
+
+<style type="text/css">
+.yqlj{
+  font-size: 28px;
+}
+</style>
